--- a/install
+++ b/install
@@ -14,3 +14,11 @@ chmod +x /usr/local/bin/horizon
 rm -rf horizon.tar.gz /horizon-v${HORIZON_VERSION}-linux-amd64
 
 echo "\nDone installing stellar-core and horizon...\n"
+
+# zabbix agent
+wget http://repo.zabbix.com/zabbix/3.4/debian/pool/main/z/zabbix-release/zabbix-release_3.4-1+stretch_all.deb
+dpkg -i zabbix-release_3.4-1+stretch_all.deb
+apt-get update
+apt-get install zabbix-agent
+
+echo "\nDone installing zabbix-agent...\n"
